@@ -1,3 +1,9 @@
+Sun Aug 5 19:21:02 EDT 2007 J Phelps <godless@users.sf.net>
+	* loader_libaudiofile.cpp, loader_libaudiofile.h:
+	New loaders added. Currently empty.
+	* : SCons scripts adjusted to detect libaudiofile
+	<default GCC search path only> and to compile the
+	libaudiofile loader only if libaudiofile is found.
 Sun Aug 5 18:09:37 EDT 2007 J Phelps <godless@users.sf.net>
 	* file_format_manager.h, Error.h: Moved definitions of
 	File_Error and File_Corrupt from the former to the latter.
